# bam_mcp_server

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
benches/: bam_queries.rs
docs/: bam-pileup-mcp-spec.md
src/: cli.rs  error.rs  lib.rs  main.rs  pileup.rs  query.rs  reference.rs  render.rs  server.rs
tests/: http.rs  integration.rs
